// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should add clickable class when onClick is defined 1`] = `
<DocumentFragment>
  <li
    aria-selected="false"
    class="ListItem ListItem--clickable"
    role="option"
  >
    <span>
      An item
    </span>
  </li>
</DocumentFragment>
`;

exports[`ListItem component should render ListItem correctly 1`] = `
<DocumentFragment>
  <li
    aria-selected="false"
    class="ListItem"
    role="option"
  >
    <p>
      An item
    </p>
  </li>
</DocumentFragment>
`;

exports[`ListItem component should render correctly when disabled 1`] = `
<DocumentFragment>
  <li
    aria-selected="false"
    class="ListItem ListItem--disabled"
    role="option"
  >
    <span>
      An item
    </span>
  </li>
</DocumentFragment>
`;

exports[`ListItem component should set disabled prop on li when required 1`] = `
<DocumentFragment>
  <li
    aria-selected="false"
    class="ListItem ListItem--disabled"
    disabled=""
    role="option"
  >
    <span>
      An item
    </span>
  </li>
</DocumentFragment>
`;

exports[`ListItem component should turn string items to Text 1`] = `
<DocumentFragment>
  <li
    aria-selected="false"
    class="ListItem"
    role="option"
  >
    <span>
      Simple string
    </span>
  </li>
</DocumentFragment>
`;
